# bitmanipulation

./: .gitignore  .travis.yml  Doxyfile  DoxygenLayout.xml  LICENSE  README.md  _r_e_a_d_m_e_8md.html  bit_8h.html  bit_8h_source.html  bit__flip_8h.html  bit__flip_8h_source.html  bit__mask_8h.html  bit__mask_8h_source.html  bit__read_8h.html  bit__read_8h_source.html  bit__reset_8h.html  bit__reset_8h_source.html  bit__set_8h.html  bit__set_8h_source.html  dir_7de30d8d6441eca96418c0d836f3a440.html  dir_af99bb3c152a306abd27951285ad1127.html  files.html  globals.html  globals_defs.html  index.hhc  index.hhk  index.hhp  index.html
.github/workflows/: cmake.yml  pages.yml
C/: .gitignore  CMakeLists.txt  bit.h
C/include/: bit_flip.h  bit_mask.h  bit_read.h  bit_reset.h  bit_set.h
C/test/: bit_flip_test.c  bit_mask_test.c  bit_read_test.c  bit_reset_test.c  bit_set_test.c
c_coverage/: coverage.build_.._test_bit_flip_test.c.html  coverage.build_.._test_bit_mask_test.c.html  coverage.build_.._test_bit_read_test.c.html  coverage.build_.._test_bit_reset_test.c.html  coverage.build_.._test_bit_set_test.c.html  coverage.html  coverage.test_bit_flip_test.c.html  coverage.test_bit_mask_test.c.html  coverage.test_bit_read_test.c.html  coverage.test_bit_reset_test.c.html  coverage.test_bit_set_test.c.html
docs/html/: _r_e_a_d_m_e_8md.html  bit_8h.html  bit_8h_source.html  bit__mask__test_8c.html  bit__reset__test_8c.html  bit__set__test_8c.html  dir_af99bb3c152a306abd27951285ad1127.html  dir_ee297c2129aae31867c5644e52b4adab.html  files.html  globals.html  globals_defs.html  globals_func.html  index.hhc  index.hhk  index.html  menudata.js
docs/html/c_coverage/: coverage.html  coverage.test_bit_flip_test.c.html  coverage.test_bit_mask_test.c.html  coverage.test_bit_read_test.c.html  coverage.test_bit_reset_test.c.html  coverage.test_bit_set_test.c.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
docs/man/man3/: README.md.3  _home_travis_build_coder137_bitmanipulation_C_.3  _home_travis_build_coder137_bitmanipulation_C_test_.3  bit.h.3  bit_mask_test.c.3  bit_reset_test.c.3  bit_set_test.c.3
html/: dir_af99bb3c152a306abd27951285ad1127.html  index.hhp
html/c_coverage/: coverage.build_.._test_bit_flip_test.c.html  coverage.build_.._test_bit_mask_test.c.html  coverage.build_.._test_bit_read_test.c.html  coverage.build_.._test_bit_reset_test.c.html  coverage.build_.._test_bit_set_test.c.html  coverage.html
man/man3/: bit.h.3
